--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ httpx==0.28.1
 httpx-sse==0.4.0
 idna==3.10
 markdown-it-py==3.0.0
-mcp==1.9.1
+mcp
 mcp-server-calculator==0.2.0
 mdurl==0.1.2
 openapi-pydantic==0.5.1
